--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -71,5 +71,7 @@
   padding: 2rem 0;
   width: 30rem;
   text-align: center;
+  margin-bottom: 1rem;
+  text-decoration: none;
 }
 /*# sourceMappingURL=main.css.map */
